# streamlit-bubble-chat

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: tests.instructions.md
.github/prompts/: release.prompt.md
.github/skills/developing-with-streamlit/skills/building-streamlit-dashboards/: SKILL.md
.github/skills/developing-with-streamlit/skills/optimizing-streamlit-performance/: SKILL.md
.github/skills/developing-with-streamlit/templates/apps/dashboard-companies/: streamlit_app.py
.github/skills/developing-with-streamlit/templates/apps/dashboard-compute/: streamlit_app.py
.github/skills/developing-with-streamlit/templates/apps/dashboard-compute-snowflake/: streamlit_app.py
.github/skills/developing-with-streamlit/templates/apps/dashboard-feature-usage/: streamlit_app.py
.github/skills/developing-with-streamlit/templates/apps/dashboard-metrics/: streamlit_app.py
.github/skills/developing-with-streamlit/templates/apps/dashboard-metrics-snowflake/: streamlit_app.py
.github/skills/developing-with-streamlit/templates/apps/dashboard-seattle-weather/: streamlit_app.py
.github/skills/developing-with-streamlit/templates/apps/dashboard-stock-peers/: streamlit_app.py
.github/skills/developing-with-streamlit/templates/apps/dashboard-stock-peers-snowflake/: streamlit_app.py
.github/skills/developing-with-streamlit/templates/themes/: README.md  manage.py
.github/skills/developing-with-streamlit/templates/themes/_shared/: streamlit_app.py
.github/skills/developing-with-streamlit/templates/themes/dracula/: streamlit_app.py
.github/workflows/: ci.yml  release.yml
docs/: api-reference.md  architecture.md  customization.md  releasing.md
examples/: avatar_chat.py  base_chat.py
examples/dashboard_agent/: .env.example  app.py
examples/dashboard_agent/data/: sales_summary.csv
streamlit_bubble_chat/: __init__.py  pyproject.toml
streamlit_bubble_chat/frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
streamlit_bubble_chat/frontend/src/: contrast.ts  dom.ts  icons.ts  index.ts  messages.ts  sound.ts  styles.css  theme.ts  types.ts
tests/: conftest.py  test_component_api.py  test_e2e_avatar.py  test_e2e_rerun_stress.py  test_e2e_simple.py  test_e2e_sound.py
tests/apps/: rerun_stress_app.py
(+7 files in other folders)
